[TR #142] Safari Mobile Form Control Bug (#202)
This PR fixes an issue with form controls on Safari Mobile not showing the border.

--- a/src/components/form.scss
+++ b/src/components/form.scss
@@ -45,6 +45,7 @@
   padding: var(--op-space-2x-small) var(--op-space-x-small) var(--op-space-2x-small) var(--op-space-small);
   border: none;
   border-radius: var(--op-radius-medium);
+  appearance: none;
   background-color: var(--op-color-neutral-plus-eight);
   box-shadow: var(--op-border-all) var(--__op-form-control-border-color);
   color: var(--op-color-neutral-on-plus-eight);
